[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["ster"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.1"
regex = "1.5.4"
ansi_term = "0.12"
lazy_static = "1.4.0"
chrono = "0.4.23"
rayon = "1.7"