[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["ster"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { version = "0.11.0", features = [] }
regex = "1.5.4"
ansi_term = "0.12"
lazy_static = "1.4.0"
chrono = "0.4.23"
rayon = "1.7"
ahash = "0.8.3"

[profile.release]
debug = true
#inline-threshold = 0
